# humf-experiments

./: .dvcignore  .gitignore  .gitlab-ci.yml  .gitmodules  .pre-commit-config.yaml  README.md  dvc.yaml  main.py  params.yaml  pyproject.toml  run_workflow.sh  testfile.dvc  zntrack.json
.dvc/: config
.gitlab-ci/: pre-commit.sh
data/: .gitignore  h2o_trajectory.dvc  water_oxonium_manual_trajectory.gro.dvc
nodes/ConvertTrajectoryToOrcaInputs/: node-meta.json
nodes/CreateGromacsDataset/: node-meta.json
nodes/CreateOrcaDataset/: node-meta.json
nodes/EvaluateModels/: node-meta.json
nodes/EvaluateModels_1/: node-meta.json
nodes/NH2OTrajectory/: .gitignore  node-meta.json
nodes/TrainModel/: node-meta.json
nodes/TrainModel_1/: node-meta.json
nodes/create_dataset/: node-meta.json
nodes/evaluate_ljc_water_on_gromacs/: node-meta.json
nodes/evaluate_ljc_water_on_orca/: .gitignore  node-meta.json
nodes/evaluate_models/: node-meta.json
nodes/evaluate_polynomial_water_on_gromacs/: node-meta.json
nodes/evaluate_polynomial_water_on_orca/: .gitignore  dvc.yaml  node-meta.json
nodes/fit_ljc_water_to_CreateGromacsDataset/: node-meta.json
nodes/fit_ljc_water_to_gromacs/: node-meta.json
nodes/fit_ljc_water_to_orca/: .gitignore  node-meta.json
nodes/fit_polynomial_water_to_gromacs/: node-meta.json
nodes/fit_polynomial_water_to_orca/: .gitignore  node-meta.json
nodes/get_3_h2o_trajectory/: .gitignore  node-meta.json
nodes/run_orca/: node-meta.json
notebooks/: try_orca_data.ipynb
scripts/: dvc.sh  reset_zntrack.sh
slurm_inputs/: submit.slurm
(+72 files in other folders)
