[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "humf-experiments"
version = "0.1.0"
description = ""
authors = ["Niklas Kappel <niklas.kappel@kit.edu>"]
readme = "README.md"
packages = [{ include = "humf_experiments", from = "src" }]

[tool.poetry.dependencies]
python = "~3.11"
humf = { path = "submodules/humf", develop = true }
zntrack = "^0.7.3"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"
pre-commit = "^3.8.0"
pytest = "^8.3.2"
dvc-ssh = "^4.1.1"

[tool.isort]
profile = "black"
